fixed keys being off-centered

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,6 @@
     height: 50px;
 
     text-align: center;
-    line-height: 50px;
     vertical-align: middle;
 
     font-size: 30px;
